# rsserver

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  help_txt
migrations/: 000001_logs.up.sql
src/: app_state.rs  cfg.rs  handler.rs  jwt.rs  main.rs  middleware.rs  models.rs  postgres.rs  tools.rs
