[package]
name = "rsserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
http = "1.3.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
tokio = { version = "1.45.0", features = ["full"] }
