[package]
name = "rsserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenv = "0.15.0"
http = "1.3.1"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
